# InformationFlowAnalysisEbpf

./: .gitignore  Makefile  Questions.txt  README.md  ebpf-cfg.cabal
app/: Analysis.hs  Cfg.hs  Equations.hs  Main.hs  Types.hs
examples/: categorize_and_sum.asm  count_bits.asm  doWhile.asm  doWhileIfNested.asm  example1.asm  factorial5.asm  gcd.asm  ifStatement.asm  is_prime.asm  max_value.asm  nestedIfLoop.asm  nestedWhiles.asm  seqWhiles.asm  sum_digits.asm  sum_even10.asm  sum_five.asm  whileLoop.asm
graphs/: add.dot  count_bits.dot  doWhile.dot  doWhileIfNested.dot  factorial5.dot  gcd.dot  ifStatement.dot  max_value.dot  nestedIfLoop.dot  nestedWhiles.dot  seqWhiles.dot  sum_digits.dot  sum_even10.dot  sum_five.dot  whileLoop.dot
utils/: FirstMeetingNotes.txt  Questions.txt  SecondMeetingNotes.txt  TODO.txt  ThesisDescription.txt  ThesisProblemFormulation.txt  ThirdMeetingNotes.txt  ThirdMeetingQuestions.txt
utils/meetings/: FifthMeetingNotes.txt  FourthMeetingNotes.txt  ThirdMeetingNotes.txt
utils/thesis/: ThesisDescription.txt
